# sentrix-explorer-v2

./: .coderabbit.yaml  .commitlintrc.json  .env.example  .gitignore  Cargo.toml  README.md  build.rs  deny.toml  tailwind.config.js
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  gitleaks.yml  link-check.yml
deploy/: Caddyfile  README.md  deploy.sh  sentrix-explorer@.service
locales/: en.json  id.json  zh.json
proto/: sentrix.proto
public/: manifest.json  robots.txt  sitemap.xml  sw.js
scripts/: audit-static.sh
src/: config.rs  labels.rs  lib.rs  main.rs  pwa.rs  theme.rs  util.rs
src/api/: address.rs  evm.rs  mod.rs  native.rs
src/components/: command_palette.rs  contract_panels.rs  copy_cli.rs  error_boundary.rs  footer.rs  identicon.rs  lang_switcher.rs  live_feed.rs  mempool.rs  metamask.rs  mod.rs  navbar.rs  rwa.rs  skeleton.rs  sparkline.rs  stats.rs  stats_dashboard.rs  testnet_banner.rs  tx_detail.rs  validator_activity.rs  verified_badge.rs
src/context/: network.rs
src/grpc/: client.rs  mod.rs
src/i18n/: mod.rs
src/screens/: address_detail.rs  assets.rs  block_detail.rs  contracts.rs  dashboard.rs  lab.rs  mod.rs  not_found.rs  tx_detail.rs  verified.rs
src/state/: canonical.rs  chain.rs  deploys.rs  feed.rs  gas.rs  mempool.rs  mod.rs  network.rs
style/: tailwind.css
