[package]
name = "sentrix-explorer-v2"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Obsidian Engine — Leptos+WASM block explorer for Sentrix Chain over gRPC-Web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core
leptos = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }

# Server-only
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# gRPC-Web client (browser-side)
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen"] }
tonic-web-wasm-client = "0.6"
prost = "0.13"

# Async glue
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
console_error_panic_hook = "0.1"
http = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Location",
    "Storage",
    "Navigator",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Clipboard",
] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
prost-build = "0.13"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    # tonic's `transport` (hyper-based server stubs) is only sound on
    # native targets — pulled in for SSR so build.rs can emit server
    # codegen, kept out of the WASM bundle.
    "tonic/transport",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.leptos]
output-name = "sentrix-explorer-v2"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
