[package]
name = "sentrix-explorer-v2"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Obsidian Engine — Leptos+WASM block explorer for Sentrix Chain over gRPC-Web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos core
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# Server-only
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# gRPC-Web client (browser-side). Proto types come from the standalone
# `sentrix-proto` crate that the chain repo publishes — single source of
# truth for the schema.
sentrix-proto = "0.1"
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-web-wasm-client = "0.9"

# Async glue
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
console_error_panic_hook = "0.1"
http = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.7", default-features = false, features = ["http", "json"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Event",
    "EventTarget",
    "Location",
    "Storage",
    "Navigator",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Clipboard",
] }

# Build-deps removed — proto codegen lives in the published
# `sentrix-proto` crate, no longer regenerated here.

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    # tonic's `transport` (hyper-based server stubs) is only sound on
    # native targets — pulled in for SSR so build.rs can emit server
    # codegen, kept out of the WASM bundle.
    "tonic/transport",
]

[profile.release]
# This profile drives the SSR binary via cargo-leptos. SSR runs server-side
# only — opt-level='z' + full LTO is overkill (binary size doesn't matter
# server-side, link time was running 5+ min per release build). Thin LTO at
# opt-level=3 cuts the link to ~30-60 sec without measurable runtime cost.
# WASM stays fully optimised because wasm-release inherits + overrides each
# of these for the browser-bound bundle.
codegen-units = 16
lto = "thin"
opt-level = 3

[package.metadata.leptos]
# Bump the build-id suffix on every breaking JS/WASM ABI change. CF caches
# the JS shim aggressively (4h browser-cache TTL on text/javascript) while
# WASM only sticks around max-age=600 — when the two go out of sync mid-cache
# the browser hits "Import #N: function import requires a callable" because
# wasm-bindgen hashes `__wbg_*` symbols off the Rust source. Renaming the
# output forces both files into a fresh URL, dodging the version skew.
output-name = "sentrix-explorer-v2-r1"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# Faster iteration profile — used by `cargo leptos build --profile fast`
# (or set `lib-profile-release = "fast-wasm"` temporarily during active
# UI dev). About 3× faster than the full `wasm-release` profile because
# it drops full LTO and parallelises codegen. WASM bytes: ~1.4 MB vs
# 1.2 MB for full release — fine for staging, switch back to
# `wasm-release` for actual production cuts.
[profile.fast]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 4

[profile.fast-wasm]
inherits = "fast"
panic = "abort"
